Added submit button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                             <p><label>First Name: <input type = "text" name = "first_name_field"></label></p>
                         </div>
             
+            <p><input tpye = "submit" value = "Submit"></p>
         </body>
     </html>
   
