--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
             </header>
             
             <!-- Form -->
-            <form action = "http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method = "post"> </form>
+            <form action = "http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method = "post"> 
                 <fieldset>
                     <legend><strong>My Info</strong></legend>
                         <div>
                             <p><label>First Name: <input type = "text" name = "first_name_field"></label></p>
                         </div>
             
-            <p><input tpye = "submit" value = "Submit"></p>
+                <p><input tpye = "submit" value = "Submit"></p>
+            </form>
         </body>
     </html>
   
