Added last name field and fixed submit button

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                     <legend><strong>My Info</strong></legend>
                         <div>
                             <p><label>First Name: <input type = "text" name = "first_name_field"></label></p>
+                            <p><label>Last Name: <input type = "text" name = "last_name_field"><label></p>
                         </div>
             
-                <p><input tpye = "submit" value = "Submit"></p>
+                <p><input type = "submit" value = "Submit"></p>
             </form>
         </body>
     </html>
