--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <input type = "hidden" name = "hidden_field" value = "The Office, Season 2 episode 4, @18:41" >
                         </div>
                         
-                </fieldset/>
+                </fieldset>
                 
                 <div>
                     <p><input type = "reset" value = "Reset Form"></p>
