--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div>
                             <p><label>First Name: <input type = "text" name = "first_name_field" placeholder = "John" required></label></p>
                             <p><label>Last Name: <input type = "text" name = "last_name_field" placeholder = "Smith" required></label></p>
-                            <p><label>Phone Number: <input type = "tel" name = "phone_field" placeholder = "000-000-0000" pattern = "{3}-{3}-{4}" required></label></p>
+                            <p><label>Phone Number: <input type = "tel" name = "phone_field" placeholder = "000-000-0000" pattern = "[0-9]{3}-[0-9]{3}-[0-9]{4}" required></label></p>
                             <p><label>Email: <input type = "email" name = "email_field" required></label></p>
                         </div>
                         
