--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <p><label><Strong>Any Comments? </strong></label></p>
                             <p><textarea rows = "30" cols = "60" name = "comments_field" placeholder = "Type here!"> </textarea></p>
                             
-                            <input type = "hidden" name = "hidden_field" value = "The Office, Season 2 episode 4, @18:41" >
+                            <input type = "hidden" name = "hidden_field" value = "eli7" >
                         </div>
                         
                 </fieldset>
